--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">DogsOnlineImage</string>
     <string name="next_image">Следующая картинка</string>
+    <string name="error_load_image">Невозможно загрузить картику</string>
 </resources>
